<resources>
    <string name="bl_deleteall_number">清空所有号码</string>
    <string name="app_name">贝立羊</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">登   录</string>
    <string name="welcome_back">欢迎回来</string>
    <string name="login_account">请输入您的账号</string>
    <string name="login_psw">请输入密码</string>
    <string name="home_today">今天</string>
    <string name="add_device_attention">"继续操作前，请确保手表：
		1.设备支持中国移动和中国联通的SIM卡 
		2.手机和设备都有电话卡且能正常上网 
		3.设备处于开机状态"</string>
    <string name="add_device">添加设备</string>
    <string name="add_device_scan_input">扫描输入</string>
    <string name="add_device_imei">请输入IMEI</string>
    <string name="add_device_number">输入设备内电话卡号</string>
    <string name="submit">提交</string>
    <string name="feedback_txt">请输入您的意见或建议，如有需要，我们会与您的wherecpm账号对应的手机号或邮箱地址取得联系反馈。</string>
    <string name="voice_prodcast">在此输入内容 ......</string>
    <string name="sos_number_attention">        	一个设备可添加8个亲情号码  1-3为主要情亲号码，4-8为副亲情号码。</string>
    <string name="loginout_message">退出后不会删除任何历史数据，下次登录后依然可以使用本账号。</string>
    <string name="agree">同意</string>
    <string name="accept">接受</string>
    <string name="ignore">忽略</string>
    <string name="accepted">已接受</string>
    <string name="has_agreed">已同意</string>
    <string name="refuse">拒绝</string>
    <string name="has_refuse">已拒绝</string>
    <string name="has_ignore">已忽略</string>
    <string name="father">爸爸</string>
    <string name="mather">妈妈</string>
    <string name="grandfa">爷爷</string>
    <string name="grandma">奶奶</string>
    <string name="grandfater">外公</string>
    <string name="grandmather">外婆</string>
    <string name="stranger">陌生人</string>
    <string name="confirm">添加</string>
    <string name="sos1">请输入号码</string>
    <string name="str_recorder_normal">按住 说话</string>
    <string name="str_recorder_record">松开 结束</string>
    <string name="str_recorder_want_cancel">松开手指，取消</string>
    <string name="delete_bind">解除绑定</string>
    <string name="main_content">您确认要解除当前的设备？</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <string name="d">图片描述</string>
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refreshs">下拉刷新</string>
    <string name="release_to_refreshs">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="task_board">任务板</string>
    <string name="task_simple">简单任务2000步</string>
    <string name="task_midle">中等任务4000步</string>
    <string name="task_complex">困难任务8000步</string>
    <string name="unknow_type_">unknow type!</string>
    <string name="input_style_secret">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="is_not_equipment_admin">您不是设备管理员，不能进行操作</string>
    <string name="not_to_delete_admin">不能删除管理员</string>
    <string name="delete_follwers">删除关注者</string>
    <string name="or_to_delete_phone">是否要删除号码：</string>
    <string name="delete_false">删除失败</string>
    <string name="is_loading">正在加载</string>
    <string name="please_check_internet">无网络连接，请检查网络</string>
    <string name="no_permission">没有权限</string>
    <string name="send_false">发送失败</string>
    <string name="set_true">设置成功</string>
    <string name="please_input_equipment_number">请输入设备号</string>
    <string name="please_input_equipment_phoneid">请输入设备电话卡号</string>
    <string name="no_equipment_please_input">设备不存在,请重新输入</string>
    <string name="phone_is_illegal">电话号码不合法</string>
    <string name="equipment_is_binding">设备已经被绑定</string>
    <string name="ilegal_please">非法请求</string>
    <string name="equipment_is_fasle">设备号码错误</string>
    <string name="wait_admin_agree">等待管理员同意</string>
    <string name="please_wait_server_response">请耐心等待服务器响应</string>
    <string name="present_is_newest_verssion">当前已是最新版本</string>
    <string name="is_checking">正在检查</string>
    <string name="is_newest_verssion">已是最新版本</string>
    <string name="network_unusual">网络异常</string>
    <string name="update_soft_versiion">软件版本更新</string>
    <string name="new_verssion_to_update">有新版本，是否更新</string>
    <string name="loading_and_update">下载更新</string>
    <string name="later_to_talk">以后再说</string>
    <string name="cancel_loading">取消下载</string>
    <string name="text_not_null">文字不能空</string>
    <string name="nv">女</string>
    <string name="nan">男</string>
    <string name="local_number">本机号码：</string>
    <string name="is_babys">我是孩子的：</string>
    <string name="operate_fasle">操作失败</string>
    <string name="equipment_not_exist">设备不存在</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_password_ok">请输入确认密码</string>
    <string name="password_different">密码不一致</string>
    <string name="is_loging">正在登录</string>
    <string name="code_fasle">验证码错误</string>
    <string name="is_getting_code">正在获取验证码</string>
    <string name="request_fasle">请求出错</string>
    <string name="get_code_false">获取验证码失败</string>
    <string name="user_not_regist">用户未注册</string>
    <string name="get_again">重新获取</string>
    <string name="send_nimute_again">秒后重发</string>
    <string name="load_data">加载数据</string>
    <string name="is_submit">正在提交</string>
    <string name="set_false">设置失败</string>
    <string name="equipment_exist">设备存在</string>
    <string name="telephone_illegal">手机号码不合法</string>
    <string name="bind_true">绑定成功</string>
    <string name="code_false_input_agian">验证码错误,请重新输入</string>
    <string name="please_input_feedback_content">请输入反馈内容</string>
    <string name="please_input_telephone">请输入手机号码</string>
    <string name="please_input_email_adress">请输入邮箱地址</string>
    <string name="submit_true">提交成功</string>
    <string name="fuzzy_location">模糊定位</string>
    <string name="exact_location">精确定位</string>
    <string name="years">年</string>
    <string name="month">月</string>
    <string name="no_location_message">此时段无位置信息</string>
    <string name="equipment_no_phone">设备无号码</string>
    <string name="equipment_is_not_exist">设备不存在或者没有权限</string>
    <string name="send_true">发送成功</string>
    <string name="click_again_exit_program">再按一次将退出应用程序</string>
    <string name="is_setting">正在设置</string>
    <string name="client_time">定时休眠</string>
    <string name="recover_factory_set">恢复出厂设置成功</string>
    <string name="user_not_exist">该用户不存在</string>
    <string name="please_input_user_name">请输入用户名</string>
    <string name="login_false">登录失败</string>
    <string name="account_or_password_false">账号或密码错误</string>
    <string name="hint">提示</string>
    <string name="comfir_delete_message">确定删除该消息？</string>
    <string name="comfir">确定</string>
    <string name="cancel">取消</string>
    <string name="request_false">请求失败</string>
    <string name="user_account_is_regist">用户账号已被注册</string>
    <string name="regist_true">注册成功</string>
    <string name="user_is_regist">用户已经注册</string>
    <string name="is_regist">正在注册</string>
    <string name="hide">隐藏</string>
    <string name="show">显示</string>
    <string name="again_text">重新验证</string>
    <string name="minute_again_send">秒后重发</string>
    <string name="delete_area">删除安全区域</string>
    <string name="or_delete_area">是否删除安全围栏</string>
    <string name="is_adding">正在添加</string>
    <string name="please_input_area_name">请输入安全区域名称</string>
    <string name="add_true">添加成功</string>
    <string name="no_record_files">没有录音文件</string>
    <string name="administer">管理员</string>
    <string name="exit_school">进入学校</string>
    <string name="leave_school">离开学校</string>
    <string name="take_bus_time">上车时间</string>
    <string name="get_off_bus">下车时间</string>
    <string name="is_agree">已同意</string>
    <string name="is_disagree">已拒绝</string>
    <string name="disagree">拒绝</string>
    <string name="account">账号</string>
    <string name="ask_attation">申请关注</string>
    <string name="invite_attation">邀请关注</string>
    <string name="ask_attation_not_exit">关注申请不存在</string>
    <string name="operate_true">操作成功</string>
    <string name="not_the_id">不存在Id为AttentionId的关注信息</string>
    <string name="exit_fencing_call">进围栏报警</string>
    <string name="leave_fencing_call">出围栏报警</string>
    <string name="exit_leave_fengcing_call">进出围栏都报警</string>
    <string name="about_us">关于我们</string>
    <string name="office_internet">官方网站：    www.thbdxjt.com</string>
    <string name="office_weixin">官方微信 ：  天绘北斗校金童</string>
    <string name="contact_us">联系我们</string>
    <string name="family_number">亲情号码</string>
    <string name="is_father">爸爸 ：</string>
    <string name="is_mother">妈妈 ：</string>
    <string name="telephone_3">号码3：</string>
    <string name="is_ward">守护 ：</string>
    <string name="add_contact">添加联系人</string>
    <string name="no_equipment">无设备可用</string>
    <string name="please_add_equipment">请添加设备，再无设备的情况下，无法追踪小宝，部分功能将无法进行使用！</string>
    <string name="please_select">请选择</string>
    <string name="add_relationship_number">添加亲情号</string>
    <string name="add_electron_fencing">添加电子围栏</string>
    <string name="not_get_adress">未获取到地址</string>
    <string name="confirm_time_dormancy">定时休眠</string>
    <string name="message_location">消息定位</string>
    <string name="call_set">报警设置</string>
    <string name="no_disturb">免打扰时段</string>
    <string name="no_notification">22:00-次日06:00不接任何通知</string>
    <string name="force_call_alarm">强制报警响铃</string>
    <string name="force_sos_alarm">手机静音SOS报警强制响铃</string>
    <string name="times">22:00-次日06:00</string>
    <string name="avoid_lose">防丢</string>
    <string name="equipment_call">设备报警</string>
    <string name="attation_item">关注列表</string>
    <string name="no_number">暂无号码</string>
    <string name="drop_call">脱落报警</string>
    <string name="equipment_message">设备信息</string>
    <string name="sacanning_attation">扫描二维码申请关注</string>
    <string name="recompose_password">修改密码</string>
    <string name="code_is_send">验证码已经发送到:</string>
    <string name="new_password">新密码，不少于6位数</string>
    <string name="again_to_password">重复新密码</string>
    <string name="send_again">再次发送</string>
    <string name="two_code">二维码</string>
    <string name="love_number">亲情号码薄</string>
    <string name="relative">亲人</string>
    <string name="is_verify">正在验证</string>
    <string name="please_wait_send_code">"   请稍等验证码会发\\n送至绑定号码的手机上"</string>
    <string name="cancel_send">手指上滑，取消发送</string>
    <string name="exit_login">退出登录</string>
    <string name="idea_feedback">意见反馈</string>
    <string name="feedback_message">反馈详情</string>
    <string name="my_equipment">我的设备</string>
    <string name="function_item">功能列表</string>
    <string name="baby">小宝贝</string>
    <string name="voice_tackback">语音对讲</string>
    <string name="register_now">立即注册</string>
    <string name="get_code">获取验证码</string>
    <string name="agree_deal">同意用户协议</string>
    <string name="have_account_to_login">已有账号，直接登录</string>
    <string name="electronic_fence_details">电子围栏详情</string>
    <string name="electronic_fence_name">电子围栏区域名称</string>
    <string name="please_electronic_fence_name">请输入电子围栏名称</string>
    <string name="accomplish">完成</string>
    <string name="text_time">2015年05月</string>
    <string name="sunday">周日</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saterday">周六</string>
</resources>