<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

     <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <TextView
            style="@style/title_text"
            android:text="@string/add_device" />

        <ImageButton
            android:onClick="back"
            style="@style/imgbt_back"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="left|center"
            android:lineSpacingMultiplier="1"
            android:text="@string/add_device_attention"
            android:textColor="#8C8E8F"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/name_bg"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/device_code"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/add_device_imei"
                android:inputType="number"
                android:paddingLeft="10dp" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/Scanning"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/icon_get_verificationcode"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/add_device_scan_input"
                android:textColor="@color/button_text_color"
                android:textSize="15sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/device_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/name_bg"
            android:hint="@string/add_device_number"
            android:inputType="number"
            android:paddingLeft="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_select_bg"
            android:onClick="Submit"
            android:text="@string/submit"
            android:textColor="@color/button_text_color" />
    </LinearLayout>

</LinearLayout>