<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <TextView
            style="@style/title_text"
            android:text="@string/register_now" />

        <ImageButton
            android:onClick="back"
            style="@style/imgbt_back"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/rs_user_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/bl_white_bkg"
            android:hint="@string/please_input_telephone"
            android:inputType="number"
            android:paddingLeft="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/bl_white_bkg"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/ver_code"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/please_input_code"
                android:inputType="number"
                android:paddingLeft="10dp" />

            <Button
                android:onClick="getCode"
                android:id="@+id/get_code"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:background="@drawable/bl_bkg"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/get_code"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/bl_white_bkg"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/user_psw"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/login_psw"
                android:inputType="textPassword"
                android:paddingLeft="10dp" />

            <Button
                android:id="@+id/psw_display"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:background="@drawable/bl_bkg"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/show"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/bl_white_bkg"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/queuser_psw"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/please_input_password_ok"
                android:inputType="textPassword"
                android:paddingLeft="10dp" />

            <Button
                android:id="@+id/que_psw_display"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:background="@drawable/bl_bkg"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/show"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </LinearLayout>

        

        <Button
            android:id="@+id/rsok"
            android:onClick="registerok"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_select_bg"
            android:clickable="false"
            android:text="@string/comfir"
            android:textColor="@color/rs_button" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="18dp"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cb_xieyi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/bl_checkbox_btn" />

            <TextView
                android:id="@+id/xieyi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:clickable="true"
                android:text="@string/agree_deal"
                android:textColor="#696969"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:onClick="login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/have_account_to_login"
            android:clickable="true"
            android:textColor="#00FFFF"
            android:textSize="15sp" />
    </RelativeLayout>

</LinearLayout>